Bug 1456071 - Do not dispatch InsertDTMFTone call to sts thread; r=bwc

This removes the dispatch to the sts thread prior to calling
AudioConduit::InsertDTMFTone. There are assertions in ChannelProxy which
restrict the methods there to running on the main thread, so the current
code crashes immediately when inserting a tone in a debug build. The
inserted DTMF event ends up in a queue, so there is no reason not to just do
the insertion from the main thread.

MozReview-Commit-ID: G8JM9QDLrGF