media/webrtc/signaling/src/peerconnection/TransceiverImpl.cpp
@@ -579,11 +579,9 @@ TransceiverImpl::InsertDTMFTone(int tone, uint32_t duration)
 
   RefPtr<AudioSessionConduit> conduit(static_cast<AudioSessionConduit*>(
         mConduit.get()));
-  mStsThread->Dispatch(WrapRunnableNM([conduit, tone, duration] () {
-        //Note: We default to channel 0, not inband, and 6dB attenuation.
-        //      here. We might want to revisit these choices in the future.
-        conduit->InsertDTMFTone(0, tone, true, duration, 6);
-        }), NS_DISPATCH_NORMAL);
+  //Note: We default to channel 0, not inband, and 6dB attenuation.
+  //      here. We might want to revisit these choices in the future.
+  conduit->InsertDTMFTone(0, tone, true, duration, 6);
 }
 
 bool
